-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
db51bfb8553cec39caf5a17e82ff8e471718493f
tst_qdeclarativeecmascript::objectName fails consistently on multiple platforms.
This failure occurs after the the use of
o->setObjectName("world");
For Gerrit Dashboard: QTBUG-26334 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
30671,2 | Fix objectName test in tst_qdeclarativeecmascript. | master | qt/qtquick1 | Status: MERGED | +2 | 0 |