Fix objectName test in tst_qdeclarativeecmascript.

The QtQuick1 library relied on special case handling of the
objectName property in qtbase. With Qt5, there is a normal
notify signal for objectNameChanged. Remove the QtQuick1
special cases and fall through to the default code path.

Task-number: QTBUG-26334
Change-Id: I70f31947b6c74c7125d6f99a33e9b02d7ef52273
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>